# autism-spectrum-driver

./: .gitignore  .mcp.example.json  .mcp.json  .mdformat.toml  .yamllint  CONTRIBUTING.md  README.md  pyproject.toml  tasks.json
.github/workflows/: ci.yml  dependabot-auto-merge.yml  doc-quality.yml
docs/: architecture.md  setup.md
src/asd/: __init__.py  mcp_server.py  rules.py  scanner.py
src/asd/compiler/: __init__.py  _shared.py  compile.py  ingest.py
src/asd/storage/: __init__.py  artifacts.py  index.py
src/asd/tools/: __init__.py  developer.py
src/asd/validation/: __init__.py  consistency.py
tests/: test_artifacts.py  test_index.py  test_ingest.py  test_mcp_server.py  test_scanner.py  test_validation.py
