[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asd"
version = "0.1.0"
description = "Autism Spectrum Driver — systematizing memory layer for BrainXio"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "BrainXio", email = "dev@brainxio.org"},
]
keywords = ["mcp", "knowledge-base", "compilation", "semantic-search", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
asd-mcp = "asd.mcp_server:main"

[project.urls]
Homepage = "https://github.com/BrainXio/autism-spectrum-driver"
Documentation = "https://github.com/BrainXio/autism-spectrum-driver/tree/main/docs"
Repository = "https://github.com/BrainXio/autism-spectrum-driver"

[tool.hatch.build.targets.wheel]
packages = ["src/asd"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "build>=1.0",
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=2.0",
    "mdformat-gfm>=1.0.0",
    "yamllint>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["asd"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/asd"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
